--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Higher-Lower game with spotify followers",
   "icons": [
     {
-      "src": "spotify-icon.png",
+      "src": "spotify-high-low.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "spotify-icon.png",
+      "src": "spotify-high-low.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "spotify-icon.png",
+      "src": "spotify-high-low.png",
       "type": "image/png",
       "sizes": "512x512"
     }
